2010-07-27  Charlie Zender  <zender@uci.edu>

	* NCO 4.0.3 release procedure:
 	Changes since nco-4_0_2: fxm
	cd ~/nco;cvs tag -d nco-4_0_3;cvs tag -d nco-4_0_3-1
	cd ~/nco;cvs commit -m "Preparing nco-4.0.3 release"
	cvs tag -c nco-4_0_3;cvs tag -c nco-4_0_3-1

	* Add more complicated build instructions for ./configure to homepage

	* Configure now works with ncap2, netCDF4, UDUnits2, netCDF-DAP on givre

	* Always include -lcurl when building with DAP

	* Place configure GSL switches after netCDF switches

	* Change configure defaults to enable-dap-netcdf=yes and enable-dap-opendap=no

2010-07-09  Charlie Zender  <zender@uci.edu>

	* Add prerelease.txt and point to from homepage

	* Fix definition of nco_udunits2_xml in configure.in

2010-07-05  Charlie Zender  <zender@uci.edu>

	* Add -lresolv to MACOSX links in Makefile.old

	* Add x86_64 to MACOSX possibilities in pvmgetarch

2010-06-28  Charlie Zender  <zender@uci.edu>

	* Make ncatted man page lint-compliant by removing complex example

2010-06-27  Charlie Zender  <zender@uci.edu>

	* Add debian/source/format to Debian build procedures

	* NCO 4.0.2 release procedure:
 	Changes since nco-4_0_1: namespace, ncatted NUL, ncap2 1-d arrays
	cd ~/nco;cvs tag -d nco-4_0_2;cvs tag -d nco-4_0_2-1
	cd ~/nco;cvs commit -m "Preparing nco-4.0.2 release"
	cvs tag -c nco-4_0_2;cvs tag -c nco-4_0_2-1

2010-06-22  Charlie Zender  <zender@uci.edu>

	* Fix ncap2 to correctly cast variables with single dimension of size one
	Formerly, ncap2 wrote these as scalars in certain situations
	Thanks to Hugo for pointing this out and to Henry Butowsky for fixing it

2010-06-21  Henry Butowsky  <henryb@hush.com> 

	* Fixed bug with casting  a variable of size one. 
	This NOW works 'defdim("one",1);irmax[$one]=20L;'

2010-05-24  Charlie Zender  <zender@uci.edu>

	* Mark Hadfield reports that my Cygwin ncap2 build works fine
	His machines have working java setup, mine do not