@@ -1,10 +1,14 @@
-2010-07-27  Charlie Zender  <zender@uci.edu>
+2010-07-28  Charlie Zender  <zender@uci.edu>
 
 	* NCO 4.0.3 release procedure:
  	Changes since nco-4_0_2: fxm
 	cd ~/nco;cvs tag -d nco-4_0_3;cvs tag -d nco-4_0_3-1
 	cd ~/nco;cvs commit -m "Preparing nco-4.0.3 release"
 	cvs tag -c nco-4_0_3;cvs tag -c nco-4_0_3-1
+
+	* Do not write to NULL-pointer for date in nco_cnv_ccm_ccsm_cf_date()
+
+2010-07-27  Charlie Zender  <zender@uci.edu>
 
 	* Add more complicated build instructions for ./configure to homepage
 
